--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,35 +1,116 @@
-@import "reset.css";
+
+/*Keyframes*/
+@keyframes rain_effect {
+    0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+    50% {background-position: 400px 800px, 300px 300px, 200px 200px;}
+    100% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+}
+
+@-moz-keyframes rain_effect {
+    0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+    50% {background-position: 400px 800px, 300px 300px, 200px 200px;}
+    100% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+}
+
+@-webkit-keyframes rain_effect {
+    0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+    50% {background-position: 400px 800px, 300px 300px, 200px 200px;}
+    100% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+}
+
+@-ms-keyframes rain_effect {
+    0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+    50% {background-position: 400px 800px, 300px 300px, 200px 200px;}
+    100% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+}
+
 body {
-    background-color: #fff;
+	background-image: url("../image/background/shape.png");
+    background-size: 30%;
+	animation: rain_effect 40s linear infinite;
+	-webkit-animation: rain_effect 40s linear infinite;
+	-moz-animation: rain_effect 40s linear infinite;
+	-ms-animation: rain_effect 40s linear infinite;
+
+    background-color: #0c1842;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.btn-outline-primary {
+    border-radius: 30px;
+}
+
+.msg {
+    position: absolute;
+    background-color: aliceblue;
+    height: 90vh;
+    margin: 5vh;
+    padding: 2%;
+    display: flex;
+    flex-flow: column wrap;
+    border-radius: 30px;
+}
 /* 대지 */
 .container {
+    position: absolute;
     background-color: aliceblue;
-    height: 100%;
-    padding: 5%;
+    height: 90vh;
+    margin: 5vh;
+    padding: 2%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-content: center;
+    border-radius: 30px;
+    overflow: scroll;
+}
+
+.container::-webkit-scrollbar {
+    display: none; /* 크롬, 사파리, 오페라, 엣지 */
+}
+
+.lastContainer {
+    position: absolute;
+    top: 20vh;
+    background-color: aliceblue;
+    height: 60vh;
+    padding: 5%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 30px;
 }
 
 .smallContainer {
+    position: absolute;
+    bottom: 0;
     background-color: aliceblue;
     width: 500px;
-    height: 100%;
+    height: 75vh;
     padding: 2%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-content: center;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+
+nav {
+    width: 100%;
+    height: 10%;
+    padding-top: 5%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-content: center;
+    
 }
 
 form {
-    background-color: rgb(240, 255, 212);
     width: 100%;
     height: 100%;
     display: flex;
@@ -38,28 +119,49 @@ form {
     align-content: center;
 }
 
+.finish {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+}
+
 /* 그리기 */
+
+.sketchframe {
+    width: 300px;
+    height: 500px;
+}
+
 .sketchpad {
     width: 300px;
     height: 500px;
+    aspect-ratio: 3/5;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.068);
 }
 
 .controls {
-    margin-top: 80px;
-}
-
-.controls .controls__colors {
+    width: 100%;
     display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
 }
 
-.controls__colors .controls__color {
-    width: 50px;
-    height: 50px;
+.controls__colors {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.controls__color {
+    width: 11%;
+    height: auto;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.068);
-    border-radius: 25px;
 }
 
 .form-label {
@@ -80,16 +182,15 @@ form {
 /* 파일 업로드 */
 
 #preview-image {
-    object-fit: cover;
     position: relative;
-    width: 300px;
-    height: 600px;
-    overflow: hidden;
+    width: 50%;
 }
 
 /* 음식 선택 */
 .nav-tabs {
-    width: 100%;
+    position:absolute;
+    top: 10;
+    width:auto;
     display: flex;
     flex-grow: 1;
     flex-flow: row wrap;
@@ -104,8 +205,11 @@ form {
 }
 
 .tab-content {
+    position: absolute;
+    right: 8%;
+    top: 15%;
     margin-top: 5%;
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-flow: row wrap;
     justify-items: space-between;
@@ -121,6 +225,7 @@ label.btn {
 
 /* 편지쓰기 */
 .left {
+    margin-right: 10px;
     width: 500px;
     display: flex;
     flex-direction: column;
@@ -135,3 +240,26 @@ label.btn {
     align-content: center;
 }
 
+.alert-primary {
+    margin-top: 10px;
+}
+
+/* 웨이 셀렉트 */
+.way-select {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.upload {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
