--- a/views/picture_way_select.ejs
+++ b/views/picture_way_select.ejs
@@ -10,14 +10,16 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <p> 이미지 등록 방식을 선택해주세요! </p>
+    <div class="describe">
+        <p> 이미지 등록 방식을 선택해주시오 </p>
+    </div>
     <div class="smallContainer">
         <nav>
             <button type="button" class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
         </nav>
         <div class="way-select btn-group-vertical" role="group" aria-label="Vertical button group">
-            <button type="button" class="btn btn-outline-secondary" onclick="location.href='./picture_upload.html';"><img src="../image/icon/gallery.svg" alt="사진"><br>파일 업로드</button>
-            <button type="button" class="btn btn-outline-secondary" onclick="location.href='./picture_drawing.html';"><img src="../image/icon/drawing.svg" alt="그리기"><br>그리기</button>
+            <button type="button" class="btn" onclick="location.href='./picture_upload.html';"><img src="../image/icon/gallery.svg" alt="사진"><br>파일 업로드</button>
+            <button type="button" class="btn" onclick="location.href='./picture_drawing.html';"><img src="../image/icon/drawing.svg" alt="그리기"><br>그리기</button>
         </div>
     </div>
 </body>
