--- a/views/letter_success.ejs
+++ b/views/letter_success.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="lastContainer">
         <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
-        <h2> 참여해주셔서 감사합니다 </h2>
+        <h2> 참여해줘서 고맙소! 알겠소! </h2>
         <div class="finish">
             <button class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
         </div>
