--- a/views/letter_food_select.ejs
+++ b/views/letter_food_select.ejs
@@ -20,7 +20,7 @@
         </div>
         <div class="smallContainer">
             <form action="/api/food_select" method="get">
-                <nav>
+                <nav class="fsnav">
                     <button type="button" class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
                     <button type="submit" class="btn btn-outline-primary">다음</button>
                 </nav>
