--- a/views/letter_writing.ejs
+++ b/views/letter_writing.ejs
@@ -13,8 +13,8 @@
         <div class="container">
             <form action="/api/writing" method="post">
                 <nav id="writing">
-                    <button class="btn btn-outline-primary" onclick="history.back()">이전</button>
-                    <button class="btn btn-outline-primary" onclick="location.href='./letter_success.html';">다음</button>
+                    <button type="button" class="btn btn-outline-primary" onclick="history.back()">이전</button>
+                    <button type="submit" class="btn btn-outline-primary" onclick="location.href='./letter_success.html';">다음</button>
                 </nav>
                 <div class="left">
                     <img src="../image/food/궐련지_그림_닭튀김.png" alt="전에 선택한거">
