--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -132,6 +132,7 @@ nav {
     
 }
 
+
 form {
     width: 100%;
     height: 100%;
@@ -209,9 +210,20 @@ form {
 }
 
 /* 음식 선택 */
+
+.fsnav {
+    position: absolute;
+    top:0;
+    padding-left: 2%;
+    padding-right: 2%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
 .nav-tabs {
     position:absolute;
-    top: 10;
+    top: 50px;
     width:auto;
     display: flex;
     flex-grow: 1;
