--- a/views/help.ejs
+++ b/views/help.ejs
@@ -11,8 +11,9 @@
 </head>
 <body>
     <div class="msg">
+        <form action="/api/success" method="get">
         <h2>"편지와 그림으로 대감님의 1주년 축하 잔치를 꾸며주세요!"</h2><hr>
-        <p> 안녕하세요. 궐련지를 제작한 고얀놈입니다. <br>
+        <p> 안녕하세요. 궐련지를 제작한 공돌이봉입니다. <br>
             향아치 대감님의 방송 1주년을 기념하여 이렇게 온라인상으로 롤링페이퍼를 제작하게 되었습니다. <br>
             궐련지를 통해 고얀분들의 마음이 전달되어 대감님께 힘이 되었으면 좋겠습니다! <br>
         </p>
@@ -20,7 +21,7 @@
             왜 이름이 궐련지인가요?<br>
             - 나무일기를 읽다가 rolling paper를 직역하면 '궐련지'라는 뜻이라는 것을 알게되어 선정하게 되었습니다. <br><br>
             이걸 다 혼자 만들었나요?<br>
-            - 배경에 떠다니는 사모를 그려주신 고얀분과, 음식들을 그려주신 고얀분, 개발을 도와주신 선생님 이렇게 총 네 명이 참여했습니다! <br><br>
+            - 배경에 떠다니는 사모를 그려주신 참깨님과, 음식들을 그려주신 암백화님, 개발을 도와주신 도월님 이렇게 총 네 명이 참여했습니다! <br><br>
             언제까지 참여할 수 있나요?<br>
             - 이 사이트는 3월 20일 오전 중에 '대감님 이거 보셨습니까?'에 올라갈 예정입니다!<br>
             따라서 늦어도 20일 방송 시작 전까지는 참여해주시면 좋을 것 같습니다. 편지와 그림은 따로 문서로 정리해서 대감님께 보내드릴 예정입니다. <br><br>
@@ -33,7 +34,8 @@
             도배로 인해 대감님께 피해가 가는것을 원치 않습니다. 우리 모두 성숙한 고얀놈이 됩시다. <br>
             대감님도 금지인가요? 아뇨. 우리 대감님 하고싶은거 다 해 !!!
         </p>
-        <button class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
+            <button class="btn btn-outline-primary">처음으로</button>
+        </form>
     </div>
 </body>
 </html>
