--- a/views/letter_success.ejs
+++ b/views/letter_success.ejs
@@ -14,7 +14,9 @@
         <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
         <h2> 참여해줘서 고맙소! 알겠소! </h2>
         <div class="finish">
-            <button class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
+            <form action="/api/success" method="get">
+                <button class="btn btn-outline-primary">처음으로</button>
+            </form>
         </div>
     </div>
 </body>
