--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -133,7 +133,7 @@ nav {
 }
 
 
-form {
+.formstyle {
     width: 100%;
     height: 100%;
     display: flex;
@@ -272,6 +272,10 @@ label.btn {
     flex-direction: column;
     justify-content: center;
     align-content: center;
+}
+
+.alert {
+    font-family: 'HANBatang';
 }
 
 .alert-primary {
