--- a/views/picture_upload.ejs
+++ b/views/picture_upload.ejs
@@ -11,18 +11,20 @@
 </head>
 <body>
     <div class="smallContainer">
-        <nav>
-            <button class="btn btn-outline-primary" type="button" onclick="location.href='./picture_way_select.html';">이전</button>
-            <button class="btn btn-outline-primary" type="button" onclick="location.href='./picture_success.html';">다음</button>
-        </nav>
-        <div class="upload">
-            <label for="formFile" class="form-label">업로드 (비율은 3:5로 자동 조정됩니다.)</label>
-            <input class="form-control" type="file" id="formFile" onchange="setThumbnail(event);">
-    
-            <label for="preview-image" class="form-label">미리보기</label>
-            <div id="preview-image" class="ratio" style="--bs-aspect-ratio: calc(5 / 3 * 100%);">
+        <form action="/api/upload" method="post">
+            <nav>
+                <button class="btn btn-outline-primary" type="button" onclick="history.back()">이전</button>
+                <button class="btn btn-outline-primary" type="submit">다음</button>
+            </nav>
+            <div class="upload">
+                <label for="formFile" class="form-label">업로드 (비율은 3:5로 자동 조정됩니다.)</label>
+                <input class="form-control" type="file" id="formFile" onchange="setThumbnail(event);">
+        
+                <label for="preview-image" class="form-label">미리보기</label>
+                <div id="preview-image" class="ratio" style="--bs-aspect-ratio: calc(5 / 3 * 100%);">
+                </div>
             </div>
-        </div>
+        </form>
     </div>
     <script src="../JS/uploadScript.js"></script>
 </body>
