--- a/views/picture_way_select.ejs
+++ b/views/picture_way_select.ejs
@@ -15,11 +15,15 @@
     </div>
     <div class="smallContainer">
         <nav>
-            <button type="button" class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
+            <button type="button" class="btn btn-outline-primary" onclick="history.back()">처음으로</button>
         </nav>
         <div class="way-select btn-group-vertical" role="group" aria-label="Vertical button group">
-            <button type="button" class="btn" onclick="location.href='./picture_upload.html';"><img src="../image/icon/gallery.svg" alt="사진"><br>파일 업로드</button>
-            <button type="button" class="btn" onclick="location.href='./picture_drawing.html';"><img src="../image/icon/drawing.svg" alt="그리기"><br>그리기</button>
+            <form action="/api/way_select_upload" method="get">
+                <button type="submit" class="btn"><img src="../image/icon/gallery.svg" alt="사진"><br>파일 업로드</button>
+            </form>
+            <form action="/api/way_select_drawing" method="get">
+                <button type="submit" class="btn"><img src="../image/icon/drawing.svg" alt="그리기"><br>그리기</button>
+            </form>
         </div>
     </div>
 </body>
