--- a/views/help.ejs
+++ b/views/help.ejs
@@ -13,7 +13,7 @@
     <div class="msg">
         <form action="/api/success" method="get">
         <h2>"편지와 그림으로 대감님의 1주년 축하 잔치를 꾸며주세요!"</h2><hr>
-        <p> 안녕하세요. 궐련지를 제작한 공돌이봉입니다. <br>
+        <p> 안녕하세요. 궐련지를 제작한 대님감네얀고놈입니다. <br>
             향아치 대감님의 방송 1주년을 기념하여 이렇게 온라인상으로 롤링페이퍼를 제작하게 되었습니다. <br>
             궐련지를 통해 고얀분들의 마음이 전달되어 대감님께 힘이 되었으면 좋겠습니다! <br>
         </p>
