이름 변경 및 노가다 완료

--- a/views/letter_writing.ejs
+++ b/views/letter_writing.ejs
@@ -17,7 +17,7 @@
                     <button type="submit" class="btn btn-outline-primary">다음</button>
                 </nav>
                 <div class="left">
-                    <img src="../image/food/궐련지_그림_닭튀김.png" alt="전에 선택한거">
+                    <img src="../image/food/궐련지_그림_닭튀김.png" alt="전에 선택한거">    <% %>
                     <p>
                         선택한거 이름
                     </p>
