--- a/views/letter_writing.ejs
+++ b/views/letter_writing.ejs
@@ -17,7 +17,7 @@
                     <button type="submit" class="btn btn-outline-primary">다음</button>
                 </nav>
                 <div class="left">
-                    <img src="../image/food/<%= fname %>" alt="전에 선택한거">    <!--ejs로 파일 이름 바뀌게 해서... 어쩌고 저쩌고 -->
+                    <img src="../image/food/<%= fEname %>.png" alt="전에 선택한거">    <!--ejs로 파일 이름 바뀌게 해서... 어쩌고 저쩌고 -->
                     <p>
                         <%= fname %>
                     </p>
