--- a/views/letter_food_select.ejs
+++ b/views/letter_food_select.ejs
@@ -64,7 +64,7 @@
                     <div class="tab-pane fade" id="dessert-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
                         <ul class="dessert">
                             <li><input type="radio" id="tteok" class="btn-check" name="option" value="tteok" autocomplete="off"><label for="tteok" class="btn"><img src="../image/food/tteok.png" alt="떡"></label></button></li>
-                            <li><input type="radio" id="gotgam" class="btn-check" name="option" avalue="gotgam" utocomplete="off"><label for="gotgam" class="btn"><img src="../image/food/gotgam.png" alt="곶감"></label></button></li>
+                            <li><input type="radio" id="gotgam" class="btn-check" name="option" value="gotgam" autocomplete="off"><label for="gotgam" class="btn"><img src="../image/food/gotgam.png" alt="곶감"></label></button></li>
                             <li><input type="radio" id="candy" class="btn-check" name="option" value="candy" autocomplete="off"><label for="candy" class="btn"><img src="../image/food/candy.png" alt="옥춘이"></label></button></li>
                             <li><input type="radio" id="apple" class="btn-check" name="option" value="apple" autocomplete="off"><label for="apple" class="btn"><img src="../image/food/apple.png" alt="사과"></label></button></li>
                             <li><input type="radio" id="pear" class="btn-check" name="option" value="pear" autocomplete="off"><label for="pear" class="btn"><img src="../image/food/pear.png" alt="배"></label></button></li>
