--- a/views/help.ejs
+++ b/views/help.ejs
@@ -8,10 +8,11 @@
 
     <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/mobileStyle.css">
 </head>
 <body>
     <div class="msg">
-        <form action="/api/success" method="get">
+    <form action="/api/success" method="get" class="formstyle">
         <h2>"편지와 그림으로 대감님의 1주년 축하 잔치를 꾸며주세요!"</h2><hr>
         <p> 안녕하세요. 궐련지를 제작한 대님감네얀고놈입니다. <br>
             향아치 대감님의 방송 1주년을 기념하여 이렇게 온라인상으로 롤링페이퍼를 제작하게 되었습니다. <br>
@@ -34,7 +35,7 @@
             도배로 인해 대감님께 피해가 가는것을 원치 않습니다. 우리 모두 성숙한 고얀놈이 됩시다. <br>
             대감님도 금지인가요? 아뇨. 우리 대감님 하고싶은거 다 해 !!!
         </p>
-            <button class="btn btn-outline-primary">처음으로</button>
+            <button class="btn btn-outline-primary" id="help_back_btn">처음으로</button>
         </form>
     </div>
 </body>
