--- a/static/CSS/mobileStyle.css
+++ b/static/CSS/mobileStyle.css
@@ -1,5 +1,6 @@
 @media (max-width: 767.98px){
 
+    
     /*Keyframes*/
     @keyframes rain_effect {
         0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
@@ -25,7 +26,29 @@
         100% {background-position: 0px 0px, 0px 0px, 0px 0px;}
     }
 
+    @font-face {
+        font-family: 'EBSJSKMedium';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/EBSJSKMedium.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+    /*중세국어*/
+    @font-face {
+        font-family: 'HANBatang';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2104@1.0/HANBatang.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+    /*한자*/
+    @font-face { 
+        font-family: 'ChosunGs';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunGs.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
     body {
+        font-family: 'EBSJSKMedium';
         background-image: url("../image/background/shape.png");
         background-size: 30%;
         animation: rain_effect 40s linear infinite;
@@ -44,28 +67,30 @@
     }
 
     .msg {
-        position: absolute;
         background-color: aliceblue;
-        height: 90vh;
-        margin: 5vh;
+        height: 100%;
+        margin: 0vh;
         padding: 2%;
         display: flex;
         flex-flow: column wrap;
-        border-radius: 30px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0;
+        overflow: scroll;
     }
+
+
     /* 대지 */
     .container {
-        position: absolute;
+        height: 100vh;
         background-color: aliceblue;
-        height: 90vh;
-        margin: 5vh;
-        padding: 2%;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-evenly;
         align-content: center;
-        border-radius: 30px;
-        overflow: scroll;
+        border-radius: 0px;
+        margin: 0px;
+        padding: 5%;
     }
 
     .container::-webkit-scrollbar {
@@ -76,7 +101,7 @@
         position: absolute;
         top: 20vh;
         background-color: aliceblue;
-        height: 60vh;
+        height: 40vh;
         padding: 5%;
         display: flex;
         flex-flow: column wrap;
@@ -86,11 +111,9 @@
     }
 
     .smallContainer {
-        position: absolute;
-        bottom: 0;
         background-color: aliceblue;
-        width: 500px;
-        height: 75vh;
+        width: 100%;
+        height: 80vh;
         padding: 2%;
         display: flex;
         flex-flow: row wrap;
@@ -103,7 +126,7 @@
     nav {
         width: 100%;
         height: 10%;
-        padding-top: 5%;
+        padding-top: 0%;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
@@ -111,7 +134,8 @@
         
     }
 
-    form {
+
+    .formstyle {
         width: 100%;
         height: 100%;
         display: flex;
@@ -188,12 +212,22 @@
     }
 
     /* 음식 선택 */
+
+    .fsnav {
+        position: relative;
+        top: 2%;
+        padding-left: 2%;
+        padding-right: 2%;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
     .nav-tabs {
-        position:absolute;
-        top: 10;
+        position: relative;
+        top: -35vh;
         width:auto;
         display: flex;
-        flex-grow: 1;
         flex-flow: row wrap;
         align-items: center;
         justify-content: center;
@@ -225,20 +259,45 @@
     }
 
     /* 편지쓰기 */
+
+    #writing {
+        position: absolute;
+        top: 2%;
+        padding-left: 2%;
+        padding-right: 2%;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
     .left {
+        padding-top: 10vh;
         margin-right: 10px;
         width: 500px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-content: center;
+        align-items: center;
     }
+
+    .fname {
+        font-size: 30px;
+    }
+
+    .fdes {
+        font-size: 20px;
+    }
+
     .right {
         width: 500px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-content: center;
+    }
+
+    .alert {
+        font-family: 'HANBatang';
     }
 
     .alert-primary {
@@ -265,4 +324,15 @@
         padding-right: 5%;
     }
 
+    .describe {
+        margin-top: 10%;
+        color: white;
+        font-size: 18pt;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-content: center;
+    }
 }
