--- a/views/letter_food_select.ejs
+++ b/views/letter_food_select.ejs
@@ -7,6 +7,7 @@
         <title>상차리기</title>
         <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
         <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="../CSS/mobileStyle.css">
         <style>
             img {
                 width: 100%;
