--- a/views/letter_writing.ejs
+++ b/views/letter_writing.ejs
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
         <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="../CSS/mobileStyle.css">
     </head>
     <body>
         <form action="/api/writing" method="post" class="formstyle">
