--- a/views/picture_success.ejs
+++ b/views/picture_success.ejs
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/mobileStyle.css">
 </head>
 <body>
     <div class="lastContainer">
