--- a/views/letter_food_select.ejs
+++ b/views/letter_food_select.ejs
@@ -44,38 +44,38 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="maindish-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
                         <ul class="maindish">
-                            <li><input type="radio" id="koChicken" class="btn-check" name="option" value="koChicken" autocomplete="off"><label for="koChicken" class="btn"><img src="../image/food/koChicken.png" alt="닭백숙"></label></li>
-                            <li><input type="radio" id="chicken" class="btn-check" name="option" value="chicken" autocomplete="off"><label for="chicken" class="btn"><img src="../image/food/chicken.png" alt="닭튀김"></label></li>
-                            <li><input type="radio" id="fish" class="btn-check" name="option" value="fish" autocomplete="off"><label for="fish" class="btn"><img src="../image/food/fish.png" alt="생선"></label></li>
-                            <li><input type="radio" id="rice" class="btn-check" name="option" value="rice" autocomplete="off"><label for="rice" class="btn"><img src="../image/food/rice.png" alt="밥"></label></li>
-                            <li><input type="radio" id="soup" class="btn-check" name="option" value="soup" autocomplete="off"><label for="soup" class="btn"><img src="../image/food/soup.png" alt="국"></label></li>
-                            <li><input type="radio" id="jeon" class="btn-check" name="option" value="jeon" autocomplete="off"><label for="jeon" class="btn"><img src="../image/food/jeon.png" alt="전"></label></li>
-                            <li><input type="radio" id="kkochi" class="btn-check" name="option" value="kkochi" autocomplete="off"><label for="kkochi" class="btn"><img src="../image/food/kkochi.png" alt="꼬치"></label></li>
-                            <li><input type="radio" id="jeonliptu" class="btn-check" name="option" value="jeonliptu" autocomplete="off"><label for="jeonliptu" class="btn"><img src="../image/food/jeonliptu.png" alt="전립투"></label></li>
+                            <li><input type="radio" id="koChicken" class="btn-check" name="option" value="koChicken" autocomplete="off" required><label for="koChicken" class="btn"><img src="../image/food/koChicken.png" alt="닭백숙"></label></li>
+                            <li><input type="radio" id="chicken" class="btn-check" name="option" value="chicken" autocomplete="off" required><label for="chicken" class="btn"><img src="../image/food/chicken.png" alt="닭튀김"></label></li>
+                            <li><input type="radio" id="fish" class="btn-check" name="option" value="fish" autocomplete="off" required><label for="fish" class="btn"><img src="../image/food/fish.png" alt="생선"></label></li>
+                            <li><input type="radio" id="rice" class="btn-check" name="option" value="rice" autocomplete="off" required><label for="rice" class="btn"><img src="../image/food/rice.png" alt="밥"></label></li>
+                            <li><input type="radio" id="soup" class="btn-check" name="option" value="soup" autocomplete="off" required><label for="soup" class="btn"><img src="../image/food/soup.png" alt="국"></label></li>
+                            <li><input type="radio" id="jeon" class="btn-check" name="option" value="jeon" autocomplete="off" required><label for="jeon" class="btn"><img src="../image/food/jeon.png" alt="전"></label></li>
+                            <li><input type="radio" id="kkochi" class="btn-check" name="option" value="kkochi" autocomplete="off" required><label for="kkochi" class="btn"><img src="../image/food/kkochi.png" alt="꼬치"></label></li>
+                            <li><input type="radio" id="jeonliptu" class="btn-check" name="option" value="jeonliptu" autocomplete="off" required><label for="jeonliptu" class="btn"><img src="../image/food/jeonliptu.png" alt="전립투"></label></li>
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="drink-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
                         <ul class="drink">
-                            <li><input type="radio" id="coffee" class="btn-check" name="option" value="coffee" autocomplete="off"><label for="coffee" class="btn"><img src="../image/food/coffee.png" alt="가배"></label></button></li>
-                            <li><input type="radio" id="greentea" class="btn-check" name="option" value="greentea" autocomplete="off"><label for="greentea" class="btn"><img src="../image/food/greentea.png" alt="녹차"></label></button></li>
-                            <li><input type="radio" id="posion" class="btn-check" name="option" value="posion" autocomplete="off"><label for="posion" class="btn"><img src="../image/food/posion.png" alt="용기의 물약"></label></button></li>
-                            <li><input type="radio" id="omija" class="btn-check" name="option" value="omija" autocomplete="off"><label for="omija" class="btn"><img src="../image/food/omija.png" alt="오미자차"></label></button></li>
+                            <li><input type="radio" id="coffee" class="btn-check" name="option" value="coffee" autocomplete="off" required><label for="coffee" class="btn"><img src="../image/food/coffee.png" alt="가배"></label></button></li>
+                            <li><input type="radio" id="greentea" class="btn-check" name="option" value="greentea" autocomplete="off" required><label for="greentea" class="btn"><img src="../image/food/greentea.png" alt="녹차"></label></button></li>
+                            <li><input type="radio" id="posion" class="btn-check" name="option" value="posion" autocomplete="off" required><label for="posion" class="btn"><img src="../image/food/posion.png" alt="용기의 물약"></label></button></li>
+                            <li><input type="radio" id="omija" class="btn-check" name="option" value="omija" autocomplete="off" required><label for="omija" class="btn"><img src="../image/food/omija.png" alt="오미자차"></label></button></li>
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="dessert-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
                         <ul class="dessert">
-                            <li><input type="radio" id="tteok" class="btn-check" name="option" value="tteok" autocomplete="off"><label for="tteok" class="btn"><img src="../image/food/tteok.png" alt="떡"></label></button></li>
-                            <li><input type="radio" id="gotgam" class="btn-check" name="option" value="gotgam" autocomplete="off"><label for="gotgam" class="btn"><img src="../image/food/gotgam.png" alt="곶감"></label></button></li>
-                            <li><input type="radio" id="candy" class="btn-check" name="option" value="candy" autocomplete="off"><label for="candy" class="btn"><img src="../image/food/candy.png" alt="옥춘이"></label></button></li>
-                            <li><input type="radio" id="apple" class="btn-check" name="option" value="apple" autocomplete="off"><label for="apple" class="btn"><img src="../image/food/apple.png" alt="사과"></label></button></li>
-                            <li><input type="radio" id="pear" class="btn-check" name="option" value="pear" autocomplete="off"><label for="pear" class="btn"><img src="../image/food/pear.png" alt="배"></label></button></li>
-                            <li><input type="radio" id="yakgwa" class="btn-check" name="option" value="yakgwa" autocomplete="off"><label for="yakgwa" class="btn"><img src="../image/food/yakgwa.png" alt="약과"></label></button></li>
+                            <li><input type="radio" id="tteok" class="btn-check" name="option" value="tteok" autocomplete="off" required><label for="tteok" class="btn"><img src="../image/food/tteok.png" alt="떡"></label></button></li>
+                            <li><input type="radio" id="gotgam" class="btn-check" name="option" value="gotgam" autocomplete="off" required><label for="gotgam" class="btn"><img src="../image/food/gotgam.png" alt="곶감"></label></button></li>
+                            <li><input type="radio" id="candy" class="btn-check" name="option" value="candy" autocomplete="off" required><label for="candy" class="btn"><img src="../image/food/candy.png" alt="옥춘이"></label></button></li>
+                            <li><input type="radio" id="apple" class="btn-check" name="option" value="apple" autocomplete="off" required><label for="apple" class="btn"><img src="../image/food/apple.png" alt="사과"></label></button></li>
+                            <li><input type="radio" id="pear" class="btn-check" name="option" value="pear" autocomplete="off" required><label for="pear" class="btn"><img src="../image/food/pear.png" alt="배"></label></button></li>
+                            <li><input type="radio" id="yakgwa" class="btn-check" name="option" value="yakgwa" autocomplete="off" required><label for="yakgwa" class="btn"><img src="../image/food/yakgwa.png" alt="약과"></label></button></li>
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="abroad-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">
                         <ul class="abroad">
-                            <li><input type="radio" id="pineapplepizza" class="btn-check" name="option" value="pineapplepizza" autocomplete="off"><label for="pineapplepizza" class="btn"><img src="../image/food/pineapplepizza.png" alt="개불알피자"></label></button></li>
-                            <li><input type="radio" id="shit" class="btn-check" name="option" value="shit" autocomplete="off"><label for="shit" class="btn"><img src="../image/food/shit.png" alt="음식 같은 것"></label></button></li>
+                            <li><input type="radio" id="pineapplepizza" class="btn-check" name="option" value="pineapplepizza" autocomplete="off" required><label for="pineapplepizza" class="btn"><img src="../image/food/pineapplepizza.png" alt="개불알피자"></label></button></li>
+                            <li><input type="radio" id="shit" class="btn-check" name="option" value="shit" autocomplete="off" required><label for="shit" class="btn"><img src="../image/food/shit.png" alt="음식 같은 것"></label></button></li>
                         </ul>
                     </div>
                 </div>
