--- a/views/letter_writing.ejs
+++ b/views/letter_writing.ejs
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
         <link rel="stylesheet" href="../CSS/style.css">
         <link rel="stylesheet" href="../CSS/mobileStyle.css">
-        <script defer src="../JS/letter_writing.js"></script>
     </head>
     <body>
         <form class="formstyle">
@@ -46,5 +45,6 @@
                 </div>
             </div>
         </form>
+        <script src="../JS/letter_writing.js"></script>
     </body>
 </html>
