--- a/views/letter_success.ejs
+++ b/views/letter_success.ejs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상차리기</title>
 
-    <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/mobileStyle.css">
+    <link rel="stylesheet" href="/resources/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/mobileStyle.css">
 </head>
 <body>
     <div class="lastContainer">
-        <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
+        <img src="/image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
         <h2> 참여해줘서 고맙소! 알겠소! </h2>
         <div class="finish">
             <form action="/api/success" method="get">
