--- a/views/help.ejs
+++ b/views/help.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="msg">
-    <form action="/api/success" method="get" class="formstyle">
+    <form action="/api/success" method="get" class="welcome">
         <h2>"편지와 그림으로 대감님의 1주년 축하 잔치를 꾸며주세요!"</h2><hr>
         <p> 안녕하세요. 궐련지를 제작한 대님감네얀고놈입니다. <br>
             향아치 대감님의 방송 1주년을 기념하여 이렇게 온라인상으로 롤링페이퍼를 제작하게 되었습니다. <br>
