--- a/views/letter_success.ejs
+++ b/views/letter_success.ejs
@@ -15,7 +15,7 @@
         <img src="/image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
         <h2> 참여해줘서 고맙소! 알겠소! </h2>
         <div class="finish">
-            <form action="/api/success" method="get">
+            <form action="/" method="get">
                 <button class="btn btn-outline-primary">처음으로</button>
             </form>
         </div>
