--- a/views/main.ejs
+++ b/views/main.ejs
@@ -23,13 +23,13 @@
             </div>
             <div class="main-bottom">
                 <div class="btn-group" role="group" aria-label="picture_success">
-                    <form action="/api/main_letter" method="get">
+                    <form action="/food_select" method="get">
                         <button type="submit" class="btn btn-light">상차리기<br>(편지쓰기)</button>
                     </form>
                 </div>
             </div>
             <div class="main-top right">
-                <form action="/api/main_help" method="get">
+                <form action="/help" method="get">
                     <button type="submit" class="btn" id="help_btn">
                         <img src="../image/icon/help.svg" alt="도움말">
                     </button>
