--- a/views/letter_food_select.ejs
+++ b/views/letter_food_select.ejs
@@ -21,12 +21,12 @@
         </div>
         <div class="smallContainer">
             <nav class="fsnav">
-                <form action="/api/success" method="get">
+                <form action="/" method="get">
                     <button type="submit" class="btn btn-outline-primary">처음으로</button>
                 </form>
                 <button type="submit" class="btn btn-outline-primary" form="foodlist">다음</button>
             </nav>
-            <form action="/api/food_select" method="get" id="foodlist" class="formstyle">
+            <form action="/main_letter" method="get" id="foodlist" class="formstyle">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="maindish-tab" data-bs-toggle="tab" data-bs-target="#maindish-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">식사</button>
@@ -82,5 +82,6 @@
             </form>
         </div>
         <script src="../resources/js/bootstrap.bundle.min.js"></script>
+        <script src="../JS/food_select.js"></script>
     </body>
 </html>
